Tue Oct 13 13:38:48 UTC 2009  Sumant Tambe  <sutambe@nospam>

        * config/udm.mpb:
        * config/wix.mpb:

          . Removed quotes because they are no longer necessary. Quotes are
            generated automatically as per Johnny's changes on Oct 5th.

Tue Oct  6 09:04:03 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/ndds_ts_defaults.mpb:
          This base project requires ndds

Mon Oct  5 11:38:03 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc7.mpd:
        * templates/vc8.mpd:
          Generate quotes around a custom command, the tool we execute could
          be in a path with a space in it

Fri Oct  2 20:31:03 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * config/global.features:

          Updated support for erlang.

Mon Sep 28 15:18:36 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * config/global.features:
        * config/libpng.mpb:

          Added support for libpng.

        * templates/makedll.mpt:

          Added support for gcc on Nucleus OS.

Thu Sep 24 12:38:20 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc8platforms.mpt:
          Added Beckhoff_HMI_600 (x86)

Tue Sep 22 21:12:20 UTC 2009  Sumant Tambe  <sutambe@nospam>

        * config/udm.mpb:

          Added paths for GME 7 and GME 9.

Thu Sep 17 13:52:10 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * config/pcre.mpb:

          Only add the $(PCRE_VERSION) variable to the library name when not
          using Microsoft products.  Since the windows version of pcre
          doesn't have a version number, the variable is always empty and
          Visual Studio complains.

Wed Sep  9 21:48:19 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * docs/html/MakeProjectCreator.html:
        * modules/ProjectCreator.pm:

          Added a new psuedo variable, 'prj_type', which holds the project